# NDKdemo

./: NDK基础.md  README.md
app/: build.gradle
app/src/androidTest/java/me/shetj/ndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/: CMakeLists.txt
app/src/main/java/me/shetj/audio/: LameUtils.java
app/src/main/java/me/shetj/ndk/: MainActivity.kt
app/src/main/jni/: Android.mk  Application.mk  lame_util.c  me_shetj_audio_LameUtils.h
app/src/main/jni/libmp3lame_3.100/: id3tag.c  util.h
app/src/test/java/me/shetj/ndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
